tests/baselines/reference/parser566700.errors.txt
tests/cases/conformance/parser/ecmascript5/RegressionTests/parser566700.ts(1,10): error TS1109: Expression expected.


==== tests/cases/conformance/parser/ecmascript5/RegressionTests/parser566700.ts (1 errors) ====
    var v = ()({});
             ~
!!! error TS1109: Expression expected.